# pta

./: .gitignore  .gitlab-ci.yml  Makefile  docker-compose.yml
.github/workflows/: ci.yml
api/: .dockerignore
api/src/: index.js
app/: Dockerfile  db.sqlite3  requirements.txt
app/config/: settings.py  urls.py
app/core/: admin.py  api_urls.py  api_views.py  urls.py
app/core/migrations/: 0001_initial.py  0002_gitprofile_odooprofile_automationrule_and_more.py
app/templates/: base.html
docker/: Dockerfile
docs/: ARCHITECTURE.md  CICD.md  CONTRIBUTING.md  ODOO_GIT_AUTOMATION.md
frontend/: package.json
frontend/src/: App.vue
k8s/: deployment.yaml  namespace.yaml  service.yaml
monitoring/: Dockerfile-prometheus  prometheus.yml
pta/pta/: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.server.yml  docker-compose.yml
pta/pta/app/: .dockerignore  Dockerfile  db.sqlite3  pyproject.toml  requirements-dev.txt  requirements.txt
pta/pta/app/core/: admin.py  api_urls.py  api_views.py  views.py
pta/pta/app/core/migrations/: 0001_initial.py
pta/pta/app/core/models/: models copy.py
pta/pta/app/core/services/: __init__.py  git.py
pta/pta/app/static/css/: colors.css  forms.css  home.css
pta/pta/app/templates/: base.html  config_dashboard.html  home.html
pta/pta/app/templates/account/: login.html  password_reset.html  password_reset_from_key_done.html
pta/pta/app/templates/forms/: password_reset_from_key.html  password_reset_from_key_done.html  signup.html
scripts/: bootstrap.ps1  bootstrap.sh  check.sh  create_env.py
(+24 files in other folders)
