[tool.poetry]
name = "{{ project_slug }}"
version = "0.1.0"
description = "{{ project_description }}"
authors = ["{{ author_name }}"]
readme = "README.md"
packages = [{ include = "core" }]

[tool.poetry.dependencies]
python = "^3.12"
Django = "6.0"
djangorestframework = "*"
django-allauth = "*"
django-oauth-toolkit = "*"
gunicorn = "*"
psycopg = { extras = ["binary"], version = "*" }

[tool.poetry.group.dev.dependencies]
ruff = "*"
mypy = "*"
pytest = "*"
pytest-django = "*"
build = "*"

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
